# TestesValidacaoDeSoftware

./: README.md  generate_tests.py  metrics.py  metrics_report.json  prompts.py  pyproject.toml  requirements.txt
dataset/: funcoes_ramificadas.py
prompts/: path_extractor.py  unit_test.py
tests/: test_average.py  test_binary_search.py  test_bubble_sort.py  test_calculate_bmi.py  test_calculate_discount.py  test_classify_age.py  test_classify_triangle.py  test_contains.py  test_count_char.py  test_count_words.py  test_countdown.py  test_days_in_month.py  test_decrypt_caesar.py  test_deep_get.py  test_dfs.py  test_digit_count.py  test_distinct.py  test_divide_safe.py  test_encrypt_caesar.py  test_factorial.py  test_fibonacci.py  test_filter_even.py  test_filter_odd.py  test_find_first_upper.py  test_find_index.py  test_find_longest_word.py  test_flatten.py  test_flatten_dict.py  test_gcd.py  test_is_anagram.py  test_is_leap_year.py  test_is_prime.py  test_lcm.py  test_list_depth.py  test_max_in_list.py  test_merge_sorted.py  test_mergesort.py  test_min_in_list.py  test_month_name.py  test_palindrome_list.py  (+23 more)
