[project]
name = "testes-validacao-software"
version = "0.1.0"
description = "Gerador de testes unitários com LLM"
authors = [
    {name = "Maria Vitória"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-groq (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
